[gd_scene load_steps=3 format=3 uid="uid://b2teoaaxeuils"]

[ext_resource type="Script" uid="uid://duh7sf2nsoant" path="res://pause_menu.gd" id="1_jfm1e"]
[ext_resource type="Theme" uid="uid://dncsr5ctw7if6" path="res://UI/default_btn.tres" id="2_03fe5"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jfm1e")

[node name="BgOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.160784)

[node name="MenuHolder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeBtn" type="Button" parent="MenuHolder"]
layout_mode = 2
theme = ExtResource("2_03fe5")
text = "RESUME"

[node name="QuitBtn" type="Button" parent="MenuHolder"]
layout_mode = 2
theme = ExtResource("2_03fe5")
text = "QUIT GAME"

[connection signal="pressed" from="MenuHolder/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="MenuHolder/QuitBtn" to="." method="_on_quit_btn_pressed"]
